Fix error messages on the lexem edit page (they were invisibile because of the absolute positioning of the jQuery window manager). Will need more work to distinguish between infos / warnings / errors.

--- a/wwwbase/styles/flex.css
+++ b/wwwbase/styles/flex.css
@@ -332,15 +332,6 @@ span.spaced {
   letter-spacing: 3px;
 }
 
-div.flashMessage {
-  font-weight: bold;
-  margin: 10px auto;
-  padding: 10px 10px 10px 40px;
-  width: 40em;
-  -moz-border-radius: 7px;
-  -webkit-border-radius: 7px;
-}
-
 div.errorType {
   background: url("../img/icons/exclamation.png") no-repeat 10px center;
   border: 2px solid #eea77e;
@@ -374,4 +365,13 @@ span.tooltip2 {
    For some reason, by default they show as white on white. */
 .ui-widget-header .ui-icon {
 	background-image: url("lightness-1.10.3/images/ui-icons_222222_256x240.png");
+}
+
+/* Minor jQueryUI dialog adjustments */
+.ui-dialog {
+  font-size: 90%;
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+  padding: 0;
 }
